--- a/.gitignore
+++ b/.gitignore
@@ -1,4 +1,50 @@
+# Dependencies
 node_modules
-.devcontainer
+/.pnp
+.pnp.js
+
+# Build outputs
 .next
+out
+build
+dist
+
+# Testing
+coverage
+
+# Environment files
+.env
+.env.local
+.env.development.local
+.env.test.local
+.env.production.local
+
+# Debug logs
+npm-debug.log*
+yarn-debug.log*
+yarn-error.log*
+
+# IDE/Editor
+.vscode/*
+!.vscode/extensions.json
+.idea
+
+# Dev container
+.devcontainer
 devcontainer
+
+# OS files
+.DS_Store
+Thumbs.db
+
+# Vercel
+.vercel
+
+# TypeScript
+*.tsbuildinfo
+next-env.d.ts
+
+# Misc
+*.log
+*.swp
+*.swo
